--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,6 +24,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="20dp"
+            android:fontFamily="@font/san_francisco"
             android:paddingLeft="10dp"
             android:drawableLeft="@drawable/ic_person_black_24dp"
             android:drawablePadding="10dp"
@@ -38,6 +39,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
+            android:fontFamily="@font/san_francisco"
             android:paddingLeft="10dp"
             android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
             android:drawablePadding="10dp"
@@ -49,6 +51,7 @@
             android:id="@+id/login_button"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/san_francisco"
             android:background="@drawable/button_rectangle"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
@@ -59,6 +62,7 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/san_francisco"
             android:layout_marginTop="40sp"
             android:background="@android:color/transparent"
             android:textColor="@color/colorPrimary"
@@ -68,6 +72,7 @@
             android:id="@+id/forgotpassword"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/san_francisco"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10sp"
             android:background="@android:color/transparent"
